--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "pinia": "^2.2.6",
+    "sweetalert2": "^11.14.5",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-sweetalert2": "^5.0.11",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
